<resources>
    <string name="app_name">Foodies</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="foodie">FOODIES</string>

    <string name="create_account">Create Account</string>
    <string name="forget_password">Forget Password</string>
    <string name="log_in">LOG IN</string>

    <string name="enter_password">Enter Password</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>

    <string name="faq">FAQ</string>
    <string name="favourite_restaurants">Favourite Restaurants</string>
    <string name="order_history">Order History</string>
    <string name="log_out">Logout</string>
    <string name="my_profile">My Profile</string>
    <string name="home">Home</string>

    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>

    <string name="register">REGISTER</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="email">Email</string>
    <string name="name">Name</string>

    <string name="otp">OTP</string>
    <string name="save_changes">SAVE CHANGES</string>
    <string name="set_a_new_password">Set your new password</string>
    <string name="next">NEXT</string>

    <string name="food_item">ResName</string>
    <string name="price">Price</string>
    <string name="rating">4.1</string>

    <string name="question">Question.</string>
    <string name="answer">Answer.</string>

    <string name="message">" No favourites have be been added yet. \n Go to Home page to add favourites."</string>

</resources>
