<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.ProfileFragment">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:scaleType="centerCrop"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/wallpaper"
        tools:ignore="ContentDescription" />

    <RelativeLayout
        android:id="@+id/rtvLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/imgLogo"
        android:layout_above="@id/btnSave">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerHorizontal="true"
            android:layout_centerInParent="true">

            <EditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:hint="@string/name"
                android:padding="5dp"
                android:inputType="text"
                android:drawableEnd="@drawable/ic_profile"
                android:lines="1"
                android:importantForAutofill="no" />

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:hint="@string/email"
                android:padding="5dp"
                android:inputType="textEmailAddress"
                android:lines="1"
                android:drawableEnd="@drawable/ic_email"
                android:importantForAutofill="no" />

            <EditText
                android:id="@+id/etMobNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:hint="@string/mobile_number"
                android:padding="5dp"
                android:inputType="number"
                android:lines="1"
                android:maxLength="10"
                android:drawableEnd="@drawable/ic_phn"
                android:importantForAutofill="no" />

            <EditText
                android:id="@+id/etAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:hint="@string/delivery_address"
                android:drawableEnd="@drawable/ic_home"
                android:padding="5dp"
                android:inputType="text"
                android:lines="1"
                android:importantForAutofill="no" />

        </LinearLayout>

    </RelativeLayout>



    <Button
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/orange"
        android:text="@string/save_changes"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

</RelativeLayout>
