<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/llContent"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="5dp"
    android:layout_margin="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="6"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imgFood"
            android:layout_width="101dp"
            android:layout_height="116dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:layout_weight="2"
            android:padding="20dp"
            android:scaleType="centerCrop"
            android:src="@drawable/color_logo"
            tools:ignore="ContentDescription" />

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="185dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_margin="10dp"
            android:layout_weight="3"
            android:padding="15dp">

            <TextView
                android:id="@+id/txtName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/food_item"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:padding="10dp"
                android:text="@string/price"
                android:textSize="16sp" />

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/relativeLayout2"
            android:layout_width="63dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_gravity="center_vertical"
            android:orientation="vertical"
            android:layout_weight="1"
            android:padding="15dp">

            <ImageView
                android:id="@+id/btnFav"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:padding="10dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_nt_favourite"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/txtRating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/rating"
                android:textColor="@color/orange"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>