<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/favContent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:layout_margin="5dp"
    app:cardCornerRadius="4dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:id="@+id/llFavContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/imgLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#E2E2E2"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgFood"
                android:layout_gravity="center_horizontal"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:padding="15dp"
                android:src="@drawable/logo"
                android:scaleType="centerCrop"
                tools:ignore="ContentDescription" />

        </LinearLayout>

        <TextView
            android:id="@+id/txtName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imgLayout"
            android:text="@string/name"
            android:layout_marginTop="15dp"
            android:textStyle="bold"
            android:textSize="20sp"
            android:padding="2dp"
            android:layout_centerHorizontal="true" />

        <TextView
            android:id="@+id/txtPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtName"
            android:text="@string/price"
            android:padding="2dp"
            android:layout_centerHorizontal="true"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtPrice">

            <TextView
                android:id="@+id/txtRating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@color/orange"
                android:text="@string/rating"
                android:layout_marginStart="10dp"
                android:layout_centerVertical="true"
                android:layout_alignParentStart="true"
                android:padding="2dp"
                android:layout_centerHorizontal="true"
                tools:ignore="RelativeOverlap" />

            <ImageView
                android:id="@+id/btnFav"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="10dp"
                android:padding="10dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_nt_favourite"
                tools:ignore="ContentDescription" />

        </RelativeLayout>

    </RelativeLayout>

</androidx.cardview.widget.CardView>
